# ProgressiveGradientDescriptor

./: .gitignore  CMakeLists.txt  Makefile  PGD  PGD测试结果.md  cmake_install.cmake  index.html  main.cpp
doc/html/: _c_make_c_compiler_id_8c.html  _c_make_c_compiler_id_8c_source.html  _c_make_c_x_x_compiler_id_8cpp.html  _c_make_c_x_x_compiler_id_8cpp_source.html  _p_g_d_8cpp.html  _p_g_d_8cpp_source.html  _p_g_d_8h.html  _p_g_d_8h_source.html  annotated.html  class_p_g_d_class-members.html  class_p_g_d_class.html  classes.html  dir_2254ed4c86842eb07fcb8e0eac2ef2c8.html  dir_3c9f3ed66bc349525b536302ffbe5a4f.html  dir_95e29a8b8ee7c54052c171a88bb95675.html  dir_b2f33c71d4aa5e7af42a1ca61ff5af1b.html  dir_cb8aebdcbcd7898634ff25bad2892a2f.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_f89abcb304c928c7d889aa5625570de5.html  files.html  functions.html  functions_enum.html  functions_eval.html  functions_func.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  globals_vars.html  hierarchy.html  index.html  main_8cpp.html  main_8cpp_source.html  menudata.js  struct_p_g_d_class_1_1_struct___n4_interp_list-members.html  struct_p_g_d_class_1_1_struct___n4_interp_list.html  struct_p_g_d_class_1_1_struct___n9_interp_list-members.html  struct_p_g_d_class_1_1_struct___n9_interp_list.html  struct_p_g_d_class_1_1_struct___sample_offset_list-members.html  struct_p_g_d_class_1_1_struct___sample_offset_list.html  (+1 more)
doc/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  classes_0.js  classes_1.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  defines_5.js  enums_0.js  enumvalues_0.js  files_0.js  files_1.js  files_2.js  functions_0.js  functions_1.js  functions_2.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js
include/: PGD.h
py/: TargetVisualize.py
source/: PGD.cpp
